<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/groups_navigation"
    app:startDestination="@+id/navigation_events">

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.mealplanner.ui.groupActivity.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_group_events" />

    <fragment
        android:id="@+id/navigation_members"
        android:name="com.example.mealplanner.ui.groupActivity.members.MembersFragment"
        android:label="@string/title_members"
        tools:layout="@layout/fragment_group_members" />

    <fragment
        android:id="@+id/navigation_bills"
        android:name="com.example.mealplanner.ui.groupActivity.bills.BillsFragment"
        android:label="@string/title_bills"
        tools:layout="@layout/fragment_group_bills" />
</navigation>