<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/eventNameHeader"
        android:layout_width="148dp"
        android:layout_height="23dp"
        android:layout_marginTop="50dp"
        android:text="@string/event_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/new_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/new_event_hint"
        app:layout_constraintStart_toStartOf="@+id/eventNameHeader"
        app:layout_constraintTop_toBottomOf="@+id/eventNameHeader" />

    <TextView
        android:id="@+id/locationHeader"
        android:layout_width="148dp"
        android:layout_height="23dp"
        android:layout_marginTop="50dp"
        android:text="@string/location_tab_name"
        app:layout_constraintStart_toStartOf="@+id/eventNameHeader"
        app:layout_constraintTop_toBottomOf="@+id/new_event_name" />

    <RadioGroup
        android:id="@+id/locationRadioGroup"
        android:layout_width="149dp"
        android:layout_height="104dp"
        app:layout_constraintTop_toBottomOf="@+id/locationHeader"
        tools:layout_editor_absoluteX="54dp">

        <RadioButton
            android:id="@+id/helpDecideLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_decide" />

        <RadioButton
            android:id="@+id/customLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </RadioGroup>

    <EditText
        android:id="@+id/locationCustomInput"
        android:layout_width="92dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="@+id/locationRadioGroup"
        app:layout_constraintEnd_toEndOf="@+id/locationRadioGroup" />


    <TextView
        android:id="@+id/eventTimeHeader"
        android:layout_width="148dp"
        android:layout_height="23dp"
        android:layout_marginTop="50dp"
        android:text="@string/time_tab_name"
        app:layout_constraintStart_toStartOf="@+id/eventNameHeader"
        app:layout_constraintTop_toBottomOf="@+id/locationRadioGroup" />

    <RadioGroup
        android:id="@+id/timeRadioGroup"
        android:layout_width="152dp"
        android:layout_height="98dp"
        app:layout_constraintStart_toStartOf="@+id/locationRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/eventTimeHeader">

        <RadioButton
            android:id="@+id/helpDecideTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_decide" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </RadioGroup>

    <EditText
        android:id="@+id/timeCustomInput"
        android:layout_width="93dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/timeRadioGroup"
        app:layout_constraintEnd_toEndOf="@+id/timeRadioGroup" />

    <RadioGroup
        android:id="@+id/eventFirstOrder"
        android:layout_width="238dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/eventNameHeader"
        app:layout_constraintTop_toBottomOf="@+id/timeRadioGroup">

        <RadioButton
            android:id="@+id/selectTimeFirst"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/time_first" />

        <RadioButton
            android:id="@+id/selectLocationFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/location_first" />
    </RadioGroup>

    <Button
        android:id="@+id/createEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/create_event"
        app:layout_constraintStart_toStartOf="@+id/eventNameHeader"
        app:layout_constraintTop_toBottomOf="@+id/eventFirstOrder" />

</androidx.constraintlayout.widget.ConstraintLayout>